add new website from server na

--- a/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
+++ b/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             20
             </dd>
             <br/>
            </dl>
@@ -1668,7 +1668,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1690,9 +1690,31 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
             </span>
            </div>
           </a>
@@ -1712,7 +1734,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1734,29 +1756,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1777,62 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-gioi-vien-tay-phan-4" title="Thế Giới Viễn Tây (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/tom-va-jerry-chu-rong-bi-mat-tich" title="Tom Và Jerry: Chú Rồng Bị Mất Tích">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-vien-tay-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tom-va-jerry-chu-rong-bi-mat-tich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế Giới Viễn Tây (Phần 4)
+             Tom Và Jerry: Chú Rồng Bị Mất Tích
             </span>
             <span class="list-top-movie-item-en">
-             Westworld (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-ban-tia" title="Vua Bắn Tỉa">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-ban-tia-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vua Bắn Tỉa
-            </span>
-            <span class="list-top-movie-item-en">
-             The Sniper
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lyle-chu-ca-sau-biet-hat" title="Lyle, Chú Cá Sấu Biết Hát">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lyle-chu-ca-sau-biet-hat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lyle, Chú Cá Sấu Biết Hát
-            </span>
-            <span class="list-top-movie-item-en">
-             Lyle, Lyle, Crocodile
+             Tom and Jerry: The Lost Dragon
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1843,18 +1799,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-trinh-tham" title="Nữ Hoàng Trinh Thám">
+          <a class="list-top-movie-link" href="/phim-moi/ke-lac-loai" title="Kẻ Lạc Loài">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-trinh-tham-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-lac-loai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Hoàng Trinh Thám
+             Kẻ Lạc Loài
             </span>
             <span class="list-top-movie-item-en">
-             Queen Of Mystery - Mystery Queen
+             The Cutlass
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giot-mau-cuoi-cung" title="Giọt Máu Cuối Cùng">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giot-mau-cuoi-cung-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giọt Máu Cuối Cùng
+            </span>
+            <span class="list-top-movie-item-en">
+             The Last Blood
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/oi-troi-thai-tu-dien-ha-cua-toi" title="Ôi Trời Thái Tử Điện Hạ Của Tôi">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oi-troi-thai-tu-dien-ha-cua-toi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ôi Trời Thái Tử Điện Hạ Của Tôi
+            </span>
+            <span class="list-top-movie-item-en">
+             Oh My Prince
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1865,21 +1865,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-hiep-de-nu-hoa" title="Võ Hiệp Đế Nữ Hoa">
+          <a class="list-top-movie-link" href="/phim-moi/bi-duoi-khoi-to-doi-anh-hung-toi-nham-den-mot-cuoc-song-nhan-nha-o-vung-bien-cuong-phan-2" title="Bị đuổi khỏi tổ đội anh hùng, tôi nhắm đến một cuộc sống nhàn nhã ở vùng biên cương Phần 2">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-hiep-de-nu-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-duoi-khoi-to-doi-anh-hung-toi-nham-den-mot-cuoc-song-nhan-nha-o-vung-bien-cuong-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Võ Hiệp Đế Nữ Hoa
+             Bị đuổi khỏi tổ đội anh hùng, tôi nhắm đến một cuộc sống nhàn nhã ở vùng biên cương Phần 2
             </span>
             <span class="list-top-movie-item-en">
-             Princess Cheung Ping
+             真の仲間じゃないと勇者のパーティーを追い出されたので、辺境でスローライフすることにしました 第2期
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
